working on hand written assignments

--- a/cs511HwSolutions/hw04/nicholas_ikechukwu.hw04.tex
+++ b/cs511HwSolutions/hw04/nicholas_ikechukwu.hw04.tex
@@ -36,7 +36,7 @@
 
 
 \begin{center}
-    \Large\textbf{Solutions to CS511 Homework 03}
+    \Large\textbf{Solutions to CS511 Homework 04}
     
     \vspace{0.5cm}
     
@@ -44,173 +44,138 @@
     
     \vspace{0.3cm}
     
-    \large September 25, 2024
+    \large October 1, 2024
 \end{center}
 
 
 
-\section*{Exercise 1 Go to page 13 in Lecture Slides 09. Your task is to carefully do part 1 of the exercise
-on that page.}
+\section*{Exercise 1 [EML.Chapter 1.pdf, page 15-16]: Do part 1 of Exercise 27.}
 
-\subsection*{Prove by Natural Deduction: $\neg(p \wedge q \wedge r)\rightarrow (\neg p \vee \neg q \vee \neg r)$}
+\section*{Part 1 of Exercise 27 (Queens Problem)}
 \section*{Solution:}
 
+The wff $\psi_n$ for the n-Queens Problem can be written as:
+
+\[ \psi_n = \psi_{\text{row}_n} \wedge \psi_{\text{col}_n} \wedge \psi_{\text{diag1}_n} \wedge \psi_{\text{diag2}_n} \]
+
+Where:
+
 \begin{enumerate}
-    \item $\neg(p \wedge q \wedge r)$  \hfill [Assumption]
-    \item $\neg(\neg p \vee \neg q \vee \neg r)$  \hfill [Assumption for contradiction]
-    \item $p \wedge q \wedge r$  \hfill [De Morgan's Law applied to line 2]
-    \item Contradiction  \hfill [Lines 1 and 3 contradict]
-    \item $\neg\neg(\neg p \vee \neg q \vee \neg r)$  \hfill [Negation Introduction, 2-4]
-    \item $\neg p \vee \neg q \vee \neg r$  \hfill [Double Negation Elimination, 5]
-    \item $\neg(p \wedge q \wedge r) \to (\neg p \vee \neg q \vee \neg r)$  \hfill [Conditional Proof, 1-6]
+    \item[$a)$] $\psi_{\text{row}_n}$ (exactly one queen in each row):
+    \[ \bigwedge_{i=1}^n \left(\bigvee_{j=1}^n q_{i,j} \wedge \bigwedge_{1 \leq j < k \leq n} (\neg q_{i,j} \vee \neg q_{i,k})\right) \]
+
+    \item[$b)$] $\psi_{\text{col}_n}$ (exactly one queen in each column):
+    \[ \bigwedge_{j=1}^n \left(\bigvee_{i=1}^n q_{i,j} \wedge \bigwedge_{1 \leq i < k \leq n} (\neg q_{i,j} \vee \neg q_{k,j})\right) \]
+
+    \item[$c)$] $\psi_{\text{diag1}_n}$ (at most one queen in each diagonal):
+    \[ \bigwedge_{1 \leq i_1 < i_2 \leq n} \bigwedge_{1 \leq j_1 < j_2 \leq n} ((i_1 - j_1 = i_2 - j_2) \rightarrow (\neg q_{i_1,j_1} \vee \neg q_{i_2,j_2})) \]
+
+    \item[$d)$] $\psi_{\text{diag2}_n}$ (at most one queen in each antidiagonal):
+    \[ \bigwedge_{1 \leq i_1 < i_2 \leq n} \bigwedge_{1 \leq j_1 < j_2 \leq n} ((i_1 + j_1 = i_2 + j_2) \rightarrow (\neg q_{i_1,j_1} \vee \neg q_{i_2,j_2})) \]
 \end{enumerate}
+
+\textbf{Justification:}
+\begin{itemize}
+    \item $\psi_{\text{row}_n}$ ensures each row has exactly one queen by requiring at least one queen per row and no two queens in the same row.
+    \item $\psi_{\text{col}_n}$ does the same for columns.
+    \item $\psi_{\text{diag1}_n}$ prevents more than one queen on any diagonal by ensuring no two queens share the same $i-j$ difference.
+    \item $\psi_{\text{diag2}_n}$ prevents more than one queen on any antidiagonal by ensuring no two queens share the same $i+j$ sum.
+\end{itemize}
+
+The conjunction of these four conditions fully specifies the n-Queens Problem, ensuring a valid placement of $n$ queens on an $n \times n$ board where no two queens can attack each other.
 
 \newpage
 
-\section*{Exercise 2 Go to page 18 in Lecture Slides 10. Your task is to carefully do part 1 of the exercise
-on that page. }
-\section*{Use the tableaux method to show the validity of the following more general version of de Morgan's law (4):}
+\section*{Exercise 2 [Lecture Slides 13, page 19]: Do the exercise on that page}
 
-$\phi_1 \equiv \neg(p \land q \land r) \to (\neg p \lor \neg q \lor \neg r)$
-
+\section*{Formalized Simplified Definition of Substitution}
 \section*{Solution:}
-\begin{center}
-\begin{tabular}{l l}
-1. & $\neg(\neg(p \wedge q \wedge r) \to (\neg p \vee \neg q \vee \neg r))$ \\ 
-2. & $p \wedge q \wedge r$ \\ 
-3. & $\neg(\neg p \vee \neg q \vee \neg r)$ \\ 
-\hline
-4. & $p$ \\ 
-5. & $q$ \\ 
-6. & $r$ \\ 
-7. & $\neg p$ \\ 
-8. & $\neg q$ \\ 
-9. & $\neg r$ \\ 
-\hline
-10. & Contradiction (from 4 and 7) \\ 
-11. & Contradiction (from 5 and 8) \\ 
-12. & Contradiction (from 6 and 9) \\ 
-\end{tabular}
-\end{center}
 
+\subsection*{Modified BNF Definition with Free Variables:}
 
-\begin{center}
-\Tree [.{$\neg(\neg(p \land q \land r) \to (\neg p \lor \neg q \lor \neg r))$} 
-        [.{$\neg(p \land q \land r)$} ]
-        [.{$\neg(\neg p \lor \neg q \lor \neg r)$}
-            [.{$p$} ]
-            [.{$q$} ]
-            [.{$r$} ]
-            [.{$\neg p \lor \neg q \lor \neg r$}
-                [.{$\neg p$} 
-                    [.{X} ] ]
-                [.{$\neg q$} 
-                    [.{X} ] ]
-                [.{$\neg r$} 
-                    [.{X} ] ]
-            ]
-        ]
-    ]
-\end{center}
+\begin{verbatim}
+<wff> ::= T | F | <var> | ~<wff> | (<wff> & <wff>) | (<wff> | <wff>) | 
+          (<wff> -> <wff>) | A<var><wff> | E<var><wff>
+\end{verbatim}
 
-\newpage
-\section*{PROBLEM 1 There are do parts:
-(a) Go to page 13 in Lecture Slides 09 once more. Your task is to carefully do parts 2, 3, and 4
-of the exercise on that page.
-(b) Go to page 18 in Lecture Slides 10 once more. Your task is to carefully do parts 2, 3, and 4
-of the exercise on that page.}
+Where:
+\begin{itemize}
+    \item For $\phi = \top$ or $\bot$, $FV(\phi) = \emptyset$
+    \item For $\phi = x$ (a variable), $FV(\phi) = \{x\}$
+    \item For $\phi = \neg\psi$, $FV(\phi) = FV(\psi)$
+    \item For $\phi = (\psi_1 \star \psi_2)$ where $\star \in \{\wedge, \vee, \rightarrow\}$, $FV(\phi) = FV(\psi_1) \cup FV(\psi_2)$
+    \item For $\phi = Qx \psi$ where $Q \in \{\forall, \exists\}$, $FV(\phi) = FV(\psi) \setminus \{x\}$
+\end{itemize}
 
-\section*{(a)}
-
-\section*{2. Natural-deduction proof of the most general de Morgan's law}
-
-For $\phi_2 \equiv \neg(p_1 \land \cdots \land p_n) \to (\neg p_1 \lor \cdots \lor \neg p_n)$, where $n \geq 2$:
-
-\begin{proof}
+Additional constraints:
 \begin{enumerate}
-    \item $\neg(p_1 \land \cdots \land p_n)$ \hfill (Assumption)
-    \item $\neg(\neg p_1 \lor \cdots \lor \neg p_n)$ \hfill (Assumption for contradiction)
-    \item $p_1 \land \cdots \land p_n$ \hfill (From 2, by De Morgan's law)
-    \item Contradiction \hfill (From 1 and 3)
-    \item $\neg p_1 \lor \cdots \lor \neg p_n$ \hfill (From 2-4, by Reductio ad Absurdum)
-    \item $\neg(p_1 \land \cdots \land p_n) \to (\neg p_1 \lor \cdots \lor \neg p_n)$ \hfill (From 1-5, by Conditional Proof)
+    \item In any wff, there is at most one binding occurrence for each variable.
+    \item If $x \in FV(\phi)$, then $x$ does not occur bound in $\phi$.
 \end{enumerate}
-\end{proof}
 
-\newpage
+\subsection*{Simplified Substitution Definition:}
 
-\section*{3. Proof length is O(n)}
+Given the constraints, we can simplify the substitution definition as follows:
 
-The natural-deduction proof of $\phi_2$ has a constant number of steps regardless of $n$. The only part that depends on $n$ is the length of the formulas themselves. Therefore, the proof length is O(n).
+\[
+\phi[u/x] =
+\begin{cases}
+    \phi                   & \text{if } \phi = \top \text{ or } \bot \\
+    u                      & \text{if } \phi = x \\
+    \phi                   & \text{if } \phi = y \text{ and } x \neq y \\
+    \neg(\psi[u/x])        & \text{if } \phi = \neg\psi \\
+    \psi_1[u/x] \star \psi_2[u/x]  & \text{if } \phi = \psi_1 \star \psi_2 \text{ and } \star \in \{\wedge, \vee, \rightarrow\} \\
+    Qy (\psi[u/x])         & \text{if } \phi = Qy \psi, Q \in \{\forall, \exists\}, \text{ and } x \neq y \\
+    \phi                   & \text{if } \phi = Qx \psi \text{ and } Q \in \{\forall, \exists\}
+\end{cases}
+\]
 
-\newpage
-
-\section*{4. Complexity comparison: Natural-deduction vs. Truth-table}
-
+Where:
 \begin{itemize}
-    \item \textbf{Natural-deduction proof:} As shown above, the proof length is O(n), where n is the number of propositions.
-    
-    \item \textbf{Truth-table verification:} A truth table for n propositions has $2^n$ rows. Each row requires O(n) operations to compute.
-    
-    Total complexity: O($n \cdot 2^n$)
+    \item $u$ is $\top$, $\bot$, or a variable
+    \item The substitution is only defined if $u$ is substitutable for $x$ in $\phi$, which is always true under our constraints.
 \end{itemize}
 
-Comparison: The natural-deduction proof is significantly more efficient, with linear complexity O(n) compared to the exponential complexity O($n \cdot 2^n$) of the truth-table method.
+\subsection*{Justification for Simplification:}
+
+\begin{enumerate}
+    \item The case ``$\phi$ if $\phi = Qy \phi', Q \in \{\forall, \exists\}, x = y$'' is now covered by the last case ``$\phi$ if $\phi = Qx \psi$ and $Q \in \{\forall, \exists\}$'' because there's at most one binding occurrence for each variable.
+
+    \item We don't need to check if $u$ is substitutable for $x$ in $\phi$ in the quantifier case because:
+    \begin{enumerate}
+        \item There's at most one binding occurrence for each variable.
+        \item A variable cannot have both free and bound occurrences.
+    \end{enumerate}
+    These conditions ensure that there's no risk of variable capture during substitution.
+
+    \item The case for variables is simplified because we don't need to distinguish between free and bound occurrences of variables anymore.
+\end{enumerate}
+
+This formalization provides a more concise and less error-prone definition of substitution, taking advantage of the constraints on variable occurrences in the wffs.
+
+\newpage
+\section*{PROBLEM 1 [EML.Chapter 1.pdf, page 15-16]: Do parts 2, 3, and 4 of Exercise 27. .}
+\section*{2. }
 
 \newpage
 
-\section*{(b)}
-
-\section*{2. Use the tableaux method to show the validity of de Morgan's law (4) in general:}
-
-$\phi_2 \equiv \neg(p_1 \wedge \cdots \wedge p_n) \to (\neg p_1 \vee \cdots \vee \neg p_n)$ where $n \geq 2$.
-
-\begin{tabular}{l l}
-1. & $\neg(\neg(p_1 \wedge \cdots \wedge p_n) \to (\neg p_1 \vee \cdots \vee \neg p_n))$ \\
-2. & $\neg(p_1 \wedge \cdots \wedge p_n)$ \\
-3. & $\neg(\neg p_1 \vee \cdots \vee \neg p_n)$ \\
-4. & $p_1$ \\
-5. & $p_2$ \\
-   & $\vdots$ \\
-n+3. & $p_n$ \\
-n+4. & $\neg p_1 \vee \neg p_2 \vee \cdots \vee \neg p_n$ \\
-\hline
-n+5. & $\neg p_1$ \quad X \\
-n+6. & $\neg p_2$ \quad X \\
-     & $\vdots$ \\
-2n+4. & $\neg p_n$ \quad X \\
-\end{tabular}
+\section*{3.}
 
 \newpage
 
-\section*{3. Compute the precise size of the tableau (i.e., the number of nodes in the tree underlying the tableau), in Part 2 above, as a function of n (the number of variables).}
+\section*{4. }
 
-The tableau has:
-\begin{itemize}
-    \item $n+4$ nodes before branching
-    \item $n$ branches, each with 1 node
-\end{itemize}
-
-Total number of nodes = $(n+4) + n = 2n + 4$
-\newpage
-
-\section*{4. Compare the complexity of the tableau proof for $\phi_2$ in Part 2 above with the complexity of the natural-deduction proof of $\phi_2$ and that of the truth-table verification of $\phi_2$. For the latter two procedures, consult Lecture Slides 09.}
-
-\begin{itemize}
-    \item[a)] Tableau method: $O(n)$ nodes and steps
-    \item[b)] Natural-deduction proof: $O(n)$ steps (as shown in previous lectures)
-    \item[c)] Truth-table verification: $O(2^n)$ rows to check all possible combinations
-\end{itemize}
-
-Comparison:
-\begin{itemize}
-    \item The tableau and natural-deduction proofs have linear complexity $O(n)$.
-    \item The truth-table verification has exponential complexity $O(2^n)$.
-\end{itemize}
-
-For large $n$, the tableau and natural-deduction proofs are significantly more efficient than the truth-table method. The tableau method is comparable in efficiency to the natural-deduction proof for this particular formula.
 
 \newpage
+
+
+
+
+
+
+
+
+
 \section*{ON LEAN-4}
 \subsection*{Solutions in one file at: 
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw03/hw03_nicholas_ikechukwu.lean}}
