--- a/cs511HwSolutions/hw04/nicholas_ikechukwu.hw04.tex
+++ b/cs511HwSolutions/hw04/nicholas_ikechukwu.hw04.tex
@@ -91,7 +91,7 @@ The conjunction of these four conditions fully specifies the n-Queens Problem, e
 \section*{Formalized Simplified Definition of Substitution}
 \section*{Solution:}
 
-\subsection*{Modified BNF Definition with Free Variables:}
+\subsection*{ BNF Definition (Modified) with Free Variables:}
 
 \begin{verbatim}
 <wff> ::= T | F | <var> | ~<wff> | (<wff> & <wff>) | (<wff> | <wff>) | 
@@ -107,7 +107,7 @@ Where:
     \item For $\phi = Qx \psi$ where $Q \in \{\forall, \exists\}$, $FV(\phi) = FV(\psi) \setminus \{x\}$
 \end{itemize}
 
-Additional constraints:
+Some additional constraints:
 \begin{enumerate}
     \item In any wff, there is at most one binding occurrence for each variable.
     \item If $x \in FV(\phi)$, then $x$ does not occur bound in $\phi$.
@@ -136,9 +136,9 @@ Where:
     \item The substitution is only defined if $u$ is substitutable for $x$ in $\phi$, which is always true under our constraints.
 \end{itemize}
 
-\subsection*{Justification for Simplification:}
+\subsection*{Justification for the  Simplification above:}
 
-\begin{enumerate}
+\begin{itemize}
     \item The case ``$\phi$ if $\phi = Qy \phi', Q \in \{\forall, \exists\}, x = y$'' is now covered by the last case ``$\phi$ if $\phi = Qx \psi$ and $Q \in \{\forall, \exists\}$'' because there's at most one binding occurrence for each variable.
 
     \item We don't need to check if $u$ is substitutable for $x$ in $\phi$ in the quantifier case because:
@@ -149,15 +149,15 @@ Where:
     These conditions ensure that there's no risk of variable capture during substitution.
 
     \item The case for variables is simplified because we don't need to distinguish between free and bound occurrences of variables anymore.
-\end{enumerate}
+\end{itemize}
 
-This formalization provides a more concise and less error-prone definition of substitution, taking advantage of the constraints on variable occurrences in the wffs.
+
 
 \newpage
 \section*{PROBLEM 1 [EML.Chapter 1.pdf, page 15-16]: Do parts 2, 3, and 4 of Exercise 27. .}
 \section*{n-Queens Problem (continued)}
 
-\subsection*{2. Infinite Chessboard Argument}
+\subsection*{(2). Infinite Chessboard Argument}
 
 The argument for the Infinite Queens Problem is flawed for the following reason:
 
@@ -169,7 +169,7 @@ In other words, the conditions (a), (b), (c), and (d) for all $n \geq 4$ do not 
 
 \newpage
 
-\subsection*{3. Defining $\Theta$}
+\subsection*{(3). Defining $\Theta$}
 
 Let's define $\Theta = \{\theta_k | k \geq 1\}$ as follows:
 
@@ -188,20 +188,20 @@ This definition satisfies the required conditions:
 \newpage
 
 
-\subsection*{4. Solution to the Infinite Queens Problem}
+\subsection*{(4). Solution to the Infinite Queens Problem}
 
 Using the Compactness Theorem for Propositional Logic, we can prove that the Infinite Queens Problem has a solution:
 
-1. We have shown that every finite subset of $\Theta$ is satisfiable.
+a. We have shown that every finite subset of $\Theta$ is satisfiable.
 
-2. By the Compactness Theorem, $\Theta$ itself is satisfiable.
+b. By the Compactness Theorem, $\Theta$ itself is satisfiable.
 
-3. Let $v$ be a truth assignment that satisfies all wffs in $\Theta$.
+c. Let $v$ be a truth assignment that satisfies all wffs in $\Theta$.
 
-4. Define a queen placement on the infinite board as follows:
+d. Define a queen placement on the infinite board as follows:
    Place a queen at position $(i,j)$ if and only if $v(q_{i,j}) = \text{true}$.
 
-5. This placement is a valid solution to the Infinite Queens Problem because:
+e. This placement is a valid solution to the Infinite Queens Problem because:
    \begin{itemize}
      \item For each $k$, the placement satisfies $\theta_k$, ensuring a valid $k$-Queens solution in the $k \times k$ subboard.
      \item As $k$ increases, larger portions of the board are covered with valid queen placements.
@@ -224,23 +224,22 @@ Therefore, we have rigorously shown that the Infinite Queens Problem has a solut
 
 \newpage
 
-\section*{Exercise 3 For each of the three examples in the following three sections of Macbeth’s book, your
-task is to remove ‘sorry’ and insert appropriate Lean 4 tactics}
+\section*{Exercise 3. Hint: These should be easy if you read the book. Use existential quantifiers.}
 \section*{Solution}
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw04/hw04_nicholas_ikechukwu.lean}
 
 \newpage
 
-\section*{Exercise 4 For each of the three examples in the following three sections of Macbeth’s book, your
-task is to remove ‘sorry’ and insert appropriate Lean 4 tactics.}
-\section*{Solution}
+\section*{Exercise 4. Hint: These use existential and universal quantifiers. The existential quantifiers are used in both
+context and goal, but universal quantifiers only in context.}
 
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw04/hw04_nicholas_ikechukwu.lean}
 
 \newpage
 
-\section*{PROBLEM 2 For each of the three examples in the following three sections of Macbeth’s book,
-your task is to remove ‘sorry’ and insert appropriate Lean 4 tactics}
+\section*{PROBLEM 2. From Macbeth’s book: Hint: The first will be hard unless you use the lemma listed in the book. The other two involve some
+computation, but they should be easy if you make use of scratch paper while solving. The very last
+one shows that order matters when rewriting and is similar otherwise.}
 \section*{Solution}
 
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw04/hw04_nicholas_ikechukwu.lean}
