--- a/cs511HwSolutions/hw05/latex/nicholas_ikechukwu.hw05.tex
+++ b/cs511HwSolutions/hw05/latex/nicholas_ikechukwu.hw05.tex
@@ -49,7 +49,7 @@
 
 
 
-\section*{Exercise 1 [EML.Chapter 1.pdf, page 15-16]: Do part 1 of Exercise 27.}
+\section*{Exercise 1 [LCS, page 160]: Exercise 2.3.1, do parts (a) and (b) only }
 
 \section*{Part 1 of Exercise 27 (Queens Problem)}
 \section*{Solution:}
